# surface

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md
.github/workflows/: ci.yml  release.yml
examples/: default_configs.rs  linear_iv_demo.rs  plot_iv_smile.rs  pricing_demo.rs  temporal_iv_demo.rs
src/: lib.rs  model_params.rs
src/calibration/: config.rs  mod.rs  pipeline.rs  types.rs
src/models/: mod.rs
src/models/bs/: mod.rs
src/models/linear_iv/: interp.rs  mod.rs  temporal.rs  types.rs
src/models/svi/: mod.rs  svi_calibrator.rs  svi_model.rs
tests/: linear_iv_tests.rs  svi_tests.rs  test_utils.rs
tests/data/: options_snapshots_20250101.csv
