[package]
name = "surface-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
toml = "0.8"
anyhow = "1.0"
rand = "0.8"
cmaes-lbfgsb = "0.1.0"
libm = "0.2"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend"] }
csv = "1.2"
statrs = "0.16"
roots = "0.0.8"

[dev-dependencies]
csv = "1.3"
